--- a/Ejercicios POO-Clases/Ejercicios.csproj
+++ b/Ejercicios POO-Clases/Ejercicios.csproj
@@ -43,8 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgendaTelefonica.cs" />
+    <Compile Include="CuentaBanco.cs" />
+    <Compile Include="Estudiante.cs" />
+    <Compile Include="Estudiante2.cs" />
+    <Compile Include="Mascota.cs" />
+    <Compile Include="Producto.cs" />
+    <Compile Include="Profesor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangulo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
